# CircInspect

./: .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
admin/: admin.py
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.css  index.js
execserver/: app.py
performance_tests/: README.md  helpers.py  test_breakpoint_distance.py  test_concurrent_performance.py  test_depth.py  test_lines_of_code.py  test_nestedness.py  test_num_qubits.py  test_subroutine_calls.py
server/: app.py  command.py  helpers.py  magically_trace_stack.py  requirements.txt
server/templates/: admin.html
tests/: README.md  conftest.py  functions4testing.py  test_compatibility.py  test_concurrency.py  test_helpers.py  test_malicious.py  test_malicious_breaking.py  test_misc.py  test_parsing.py
tests/test_cases/: access_web_hack_1.txt  access_web_hack_2.txt  circuit1.txt  circuit2.txt  circuit3.txt  heavy_processing_hack.txt  infinite_loop_hack_1.txt  infinite_loop_hack_2.txt  memory_fill_hack_1.txt  memory_fill_hack_2.txt  multiline_comment_with_qnode.txt  multiple_runs_different_qnodes.txt  multiple_runs_same_qnode.txt  numpy_in_params.txt  qft_with_range_wires.txt  qml_default_mixed_device_support.txt  qml_default_qutrit_device_support.txt  qml_device_no_wires.txt  qml_device_no_wires_2.txt  qml_devices_subpackage.txt  qml_midcircuit_measure.txt  qml_operations_in_multiple_lines.txt  read_file_hack_1.txt  (+9 more)
(+12 files in other folders)
