[tool.poetry]
name = "circinspect"
version = "0.1.0"
description = ""
authors = ["UBC Quantum Software and Algorithms Research Lab"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~=3.14"
pennylane = "0.44.0"
pennylane-catalyst = "0.14.0"
flask = "^3.1.2"
google-api-python-client = "^2.188.0"
google-auth-oauthlib = "^1.2.4"
pymongo = "^4.16.0"
dill = "^0.4.1"
matplotlib = "^3.10.8"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
